--- a/Opflix - Html/pages/home/Index.html
+++ b/Opflix - Html/pages/home/Index.html
@@ -5,20 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../../assets/css/stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
     <title>Opflix</title>
 </head>
 <body>
-    <nav class="nav_opflix">
-        <ul class="font_opflix">
+    <nav class="font_opflix">
+        <ul>
+            <li> 
+                <a href=""> 
+                    Home
+                </a>
+            </li>
             <li>
-                Home
+                <a href="">
+                Lançamentos
+                </a>
+            </li>
+            <li>
+                <a href="">
+                Cadastro
+                </a>
+            </li>
+            <li>
+                <a href="">
+                Login
+                </a>
             </li>
         </ul>
     </nav>
     <main>
-        <div id="intro_opflix">
-            <img src="../../assets/img/logo_opflix.svg" alt="">
-        </div>
+        <img src="../../assets/img/logo_opflix.svg" alt="Logo da Opflix" alt="">
+        <p class="font_opflix">Sua plataforma de lançamentos favorita.</p>
     </main>
 </body>
 </html>
